--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+/github
 
 # testing
 /coverage
 
 # production
 /build
+/github
 
 # misc
 .DS_Store
@@ -17,6 +19,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.github
+.git
 
 npm-debug.log*
 yarn-debug.log*
